fix: Improve favicon visibility in dark mode
This commit addresses an issue where favicons were not clearly visible when the application was in dark mode.

Before: https://i.imgur.com/8Y9ps8H.png
After: https://i.imgur.com/WXNTcmk.png

--- a/resources/css/base.css
+++ b/resources/css/base.css
@@ -156,9 +156,12 @@ main {
     }
 }
 
+.link_icon {
+    @apply ring ring-border-200 dark:ring-dark-950;
+    @apply bg-gray-100;
+}
+
 .link-card__icon-container {
-    @apply border border-border-200 dark:border-dark-950;
-    @apply bg-gray-100 dark:bg-dark-950;
     border-radius: 50%;
     display: flex;
     justify-content: center;
